Add create, update and delete, log and exceptions in existing classes. Remove redundant implementations for comuna and region because they're part of direccion table